--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <a href="contato">Contato</nav>
     </nav>
 
-    <h2>gugghghh</h2>
+    <h2>Bem-vindo(a) ao seu desino para receitas de Natal deliciosas e fáceis. Encontre pratos tradicionais e sobremesas que farão sua ceia ser inesquecível. Inspire-se e traga a magia do sabor para a sua mesa!</h2>
 </body>
 </html>
