--- a/index.html
+++ b/index.html
@@ -20,5 +20,51 @@
     </nav>
 
     <h2>Bem-vindo(a) ao seu desino para receitas de Natal deliciosas e fáceis. Encontre pratos tradicionais e sobremesas que farão sua ceia ser inesquecível. Inspire-se e traga a magia do sabor para a sua mesa!</h2>
+
+<section class="receitas">
+<h3>PRINCIPAIS RECEITAS </h3>
+
+<div class="item">
+img src="OIP.webp"b
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
